crates/ui/src/view/snapshots/tgt_ui__view__modal__tests__delete_modal_with_revoke_offers_both_options.snap
---
source: crates/ui/src/view/modal.rs
expression: rendered
---
                                                            
                                                            
                 ┌─── Delete message? ────┐                 
                 │                        │                 
                 │      Delete for me     │                 
                 │   Delete for everyone  │                 
                 │                        │                 
                 │ ⏎ confirm · esc cancel │                 
                 └────────────────────────┘
