crates/ui/src/view/snapshots/tgt_ui__view__modal__tests__delete_modal_without_revoke_offers_only_delete_for_me.snap
---
source: crates/ui/src/view/modal.rs
expression: rendered
---
                                                            
                                                            
                                                            
                 ┌─── Delete message? ────┐                 
                 │                        │                 
                 │      Delete for me     │                 
                 │                        │                 
                 │ ⏎ confirm · esc cancel │                 
                 └────────────────────────┘
